Boot increased by adding dependencies